# AutoTeam-F

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ruff.toml  setup.sh
.github/workflows/: ci.yml  sync-upstream.yml
docs/: api.md  configuration.md  getting-started.md  mail-provider-design.md  troubleshooting.md
scripts/: sweep_leftover_members.py  sweep_stale_team_members.py
src/autoteam/: __init__.py  account_ops.py  accounts.py  admin_state.py  api.py  chatgpt_api.py  cloudmail.py  codex_auth.py  config.py  cpa_sync.py  display.py  invite.py  manager.py  manual_account.py  master_health.py  oauth_workspace.py  register_failures.py  runtime_config.py  setup_wizard.py
tests/integration/: test_docker_guard.py
tests/manual/: test_round10_dryrun.py
tests/unit/: test_accounts.py  test_admin_state.py  test_mail_cf_temp_email_sniff.py  test_mail_maillab_self_heal.py  test_mail_provider_probe.py  test_manager_reinvite.py  test_oauth_workspace_select.py  test_round11_api_fetch_header_sanitize.py  test_round11_codex_smoke_model.py  test_round11_fresh_relogin_fallback.py  test_round11_master_health_grace.py  test_round11_oauth_failure_backoff.py  test_round11_oauth_failure_kick_ws.py  test_round11_oauth_workspace_consent.py  test_round11_personal_oauth_retry.py  test_round11_realtime_probe.py  test_round11_session_token_injection.py  test_round6_patches.py  test_round8_integration.py  test_setup_wizard.py  test_spec2_lifecycle.py
(+22 files in other folders)
