[project]
name = "autoteam"
version = "0.1.0"
description = "ChatGPT Team 账号自动轮转管理工具"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "playwright>=1.40.0",
    "requests>=2.28.0",
    "rich>=14.3.4",
    "uvicorn[standard]>=0.44.0",
    "xvfbwrapper>=0.2.9; sys_platform == 'linux'",
]

[project.scripts]
autoteam = "autoteam.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoteam"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
